<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.AuthActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lets_text_view"
        style="@style/textViewAuthActivityStyle"
        android:layout_marginTop="@dimen/margin_191dp"
        android:text="@string/let_s_get_acquainted"
        android:textSize="@dimen/text_size_24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fill_out_profile_text_view"
        style="@style/textViewAuthActivityStyle"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/fill_out_the_profile_and"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintTop_toBottomOf="@id/lets_text_view"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/email_text_view"
        style="@style/customfontstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:text="@string/auth_email_input_hint"
        android:textColor="@color/grey_4"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fill_out_profile_text_view" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/grey_4"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:text="@string/auth_password_input_hint"
        android:textColor="@color/grey_4"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        app:boxStrokeColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textPassword"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/remember_me_check_box"
        style="@style/customfontstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_18dp"
        android:checked="true"
        android:text="@string/auth_remember_me_checkbox_text"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text_input_layout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/or_text_view"
        style="@style/customfontstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:text="@string/auth_alternative_option_text"
        android:textColor="@color/setting_color"
        android:textSize="@dimen/text_size_18sp"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        style="@style/customfontstyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:background="@drawable/custom_button_register"
        android:text="@string/register"
        android:textColor="@color/setting_color"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toTopOf="@id/agree_text_view_1"
        app:layout_constraintEnd_toEndOf="@id/password_text_input_layout"
        app:layout_constraintStart_toStartOf="@id/password_text_input_layout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/agree_text_view_1"
        style="@style/customfontstyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:text="@string/by_clicking_register_you_agree_to_our_terms_and_conditions"
        android:textAlignment="center"
        android:textColor="@color/setting_color"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintBottom_toTopOf="@id/already_have_acc_text_view"
        app:layout_constraintEnd_toEndOf="@id/lets_text_view"
        app:layout_constraintStart_toStartOf="@id/lets_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/already_have_acc_text_view"
        style="@style/customfontstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/grey_text_2"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sign_in_text_view"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_in_text_view"
        style="@style/customfontstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/already_have_acc_text_view" />
</androidx.constraintlayout.widget.ConstraintLayout>